#43: convert to Java 9 module
Signed-off-by: Christopher Zhong <1946052+ChristopherZhong@users.noreply.github.com>